# warp-toad

./: .gitignore  LICENSE  README.md  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
backend/: PublicCounterAddresses.json  README.md  WarptoadCoreAztecDeployment.json  foundry.toml  hardhat.config.ts  index.ts  jest.config.json  package.json  remappings.txt  tsconfig.browser.json  tsconfig.cjs.json  tsconfig.json  tsconfigOnBuild.json
backend/ignition/: WarpToadCoreParameters.json  WarpToadCoreParametersTesting.json
backend/scripts_dev_op/: deployAztecToadWarp.ts  replaceLine.ts
backend/test/: TestL1WarpToad.ts  testAztecToL1.ts  testAztecToL1Proving.ts  testAztecToadWarp.test.ts  testAztecToadWarp.ts  testL1ToAztec.ts  testL1ToL1.ts  testL1WarpToad.test.ts  testL1WarpToad.ts  testRootBridge.ts
backend/typechain-types/: hardhat.d.ts  index.ts
circuits/AZTECMerkleVerify/: Nargo.toml
circuits/EVMMerkleVerify/: Nargo.toml
circuits/GigaTreeMerkleVerify/: Nargo.toml  Prover.toml
circuits/withdraw/: Nargo.toml
contracts/: AztecRootBridge.sol  GigaRootBridge.sol  IRootBridge.sol  L1WarpToad.sol  WarpToadCore.sol
frontend/: README.md  index.html  package.json  template.env  vite.config.ts
relayer/: Cargo.toml  README.md  Rocket.toml
relayer/src/: cors.rs  main.rs  routes.rs  types.rs
scripts/: deployAztecToadWarp.ts
scripts_dev_op/: getVkEvmMerkleCircuits.ts  replaceLine.ts  setVkAsFields.ts
test/: TestL1WarpToad.js  TestL1WarpToad.ts  TestWarpToadCore.js  testAztecToadWarp.ts  testL1WarpToad.ts
(+441 files in other folders)
