[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "0.15.9"
anyhow = "1.0.96"
dotenv = "0.15.0"
hex = "0.4.3"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
